<?xml version='1.0' encoding='UTF-8'?>
<!--
 ~ Copyright (C) 2014 wak
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~    http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->
<resources>
    <string name="action_add_dictionary">Add dictionary</string>
    <string name="action_add_new_card">Add new card</string>
    <string name="action_add_to_bookmarks">Add to Bookmarks</string>
    <string name="action_add_to_flashcard">Add to Flashcard</string>
    <string name="action_auto_play">Auto Play</string>
    <string name="action_back">Back</string>
    <string name="action_close">Close</string>
    <string name="action_copy_all">Copy all</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_disable">Disable</string>
    <string name="action_down">Down</string>
    <string name="action_download">Download</string>
    <string name="action_download_now">Download Now</string>
    <string name="action_edit">Edit</string>
    <string name="action_enable">Enable</string>
    <string name="action_export">Export</string>
    <string name="action_forward">Forward</string>
    <string name="action_import">Import</string>
    <string name="action_keep">Keep</string>
    <string name="action_more">More</string>
    <string name="action_move_into_inbox">Move the card into inbox</string>
    <string name="action_open_local_file">Open local file</string>
    <string name="action_order_alphabetically">Order Alphabetically</string>
    <string name="action_rename">Rename</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_search_by_alc_co_jp">Search by alc.co.jp</string>
    <string name="action_search_by_dictionary_com">Search by dictionary.com</string>
    <string name="action_search_by_google_com">Search by google.com</string>
    <string name="action_share">Share</string>
    <string name="action_shuffle">Speech</string>
    <string name="action_speech">Speech</string>
    <string name="action_up">Up</string>
    <string name="message_confirm_delete">Are you sure you want to delete?</string>
    <string name="message_creating_index">Now creating index…</string>
    <string name="message_download_failed">Download FAILED!</string>
    <string name="message_download_succeed">Download SUCCEED</string>
    <string name="message_failure">Failure</string>
    <string name="message_in_processing">In Processing…</string>
    <string name="message_item_added">%s has been added</string>
    <string name="message_item_added_to">%1$s has been added to %2$s</string>
    <string name="message_item_already_registered_and_confirm">%1$s is already registered in %2$s. Do you want to override the content and move the card into INBOX?</string>
    <string name="message_item_is_not_supported">%s is not supported by the system</string>
    <string name="message_item_loading_failed">Could not load %s</string>
    <string name="message_item_removed">%s has been removed</string>
    <string name="message_language_settings_notice">Language settings will take effect after restart</string>
    <string name="message_loading_dictionaries">Now loading dictionaries…</string>
    <string name="message_modified">Modified</string>
    <string name="message_no_result">No result</string>
    <string name="message_settings_open_tts_settings">Open Text-to-Speech settings in Android Settings</string>
    <string name="message_success">Success</string>
    <string name="message_unable_to_access">Unable to access</string>
    <string name="message_url_placeholder">keyword or URL</string>
    <string name="message_validation_max_100">Enter at least 100 characters</string>
    <string name="message_validation_max_5000">Enter at least 5000 characters</string>
    <string name="message_validation_required">Required</string>
    <string name="title_activity_browser">Browser</string>
    <string name="title_activity_browser_bookmarks">Bookmarks</string>
    <string name="title_activity_dictionary_manager">Dictionary Manager</string>
    <string name="title_activity_directory_selector">Select Directory</string>
    <string name="title_activity_downloads">Downloads</string>
    <string name="title_activity_flashcard">Flashcard</string>
    <string name="title_activity_main">Search</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_dictionary_dienine">Matsushita-Dien Indonesian-Japanese Dictionary</string>
    <string name="title_dictionary_edict">EDICT Japanese-English Dictionary</string>
    <string name="title_dictionary_eijiro">Eijiro %s</string>
    <string name="title_dictionary_ichirofj">ICHIRO French-Japanese Dictionary</string>
    <string name="title_dictionary_pdej">PDEJ2005 English-Japanese Dictionary</string>
    <string name="title_dictionary_reijiro">Reijiro %s</string>
    <string name="title_dictionary_ryakujiro">Ryakugoro %s</string>
    <string name="title_dictionary_waeijiro">Waejiro %s</string>
    <string name="title_dictionary_webster">Webster English Dictionary 1913</string>
    <string name="title_help">HELP</string>
    <string name="title_keyword">Keyword</string>
    <string name="title_settings_about">About</string>
    <string name="title_settings_app_information">Application Information</string>
    <string name="title_settings_clipboard_search">Clipboard Search</string>
    <string name="title_settings_dictionary_manager">@string/title_activity_dictionary_manager</string>
    <string name="title_settings_fast_scroll">Fast Scroll</string>
    <string name="title_settings_legal">Legal Notices</string>
    <string name="title_settings_open_tts_settings">Open Text-to-Speech settings</string>
    <string name="title_settings_orientation">Orientation</string>
    <string name="title_settings_orientation_auto">Auto</string>
    <string name="title_settings_orientation_landscape">Landscape</string>
    <string name="title_settings_orientation_portrait">Portrait</string>
    <string name="title_settings_search">Search</string>
    <string name="title_settings_tts">Text to Speech</string>
    <string name="title_settings_tts_default_language">Default Language</string>
    <string name="title_settings_tts_language_for_translation">Language for translation</string>
    <string name="title_settings_version">Version</string>
    <string name="title_system_default">System Default</string>
    <string name="title_welcome">Welcome to monodict!</string>

    <string name="action_order_alphabetically_short" translatable="false">A-Z</string>
    <string name="app_name" translatable="false">monodict</string>
    <string name="blank_text" translatable="false">---</string>
    <string name="url_alc_co_jp_search" translatable="false">http://eow.alc.co.jp/sp/search.html?q=%s</string>
    <string name="url_dictionary_com_search" translatable="false">http://dictionary.reference.com/browse/%s</string>
    <string name="url_google_com_search" translatable="false">https://www.google.com/search?ie=UTF-8&amp;oe=UTF-8&amp;q=%s</string>
</resources>