<!--
  ~ Copyright (C) 2014 wak
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.github.wakhub.monodict.activity.BrowserActivity" >
    <item android:id="@+id/action_back"
        android:icon="@drawable/ic_action_previous_item"
        android:showAsAction="always" />
    <item android:id="@+id/action_forward"
        android:icon="@drawable/ic_action_next_item"
        android:showAsAction="always" />
    <item android:id="@+id/action_reload"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always" />
    <item android:id="@+id/action_add_to_bookmarks"
        android:title="@string/action_add_to_bookmarks"
        android:showAsAction="collapseActionView" />
    <item android:id="@+id/action_show_bookmarks"
        android:title="@string/title_activity_browser_bookmarks"
        android:showAsAction="collapseActionView" />
    <item android:id="@+id/action_open_local_file"
        android:title="@string/action_open_local_file"
        android:showAsAction="collapseActionView" />
</menu>
