<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2014 wak
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/solid_background">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_relax"
        android:layout_toLeftOf="@+id/translate_panel_close_button"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="150dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/translate_panel_display_text"
                    style="@style/AppTheme.DisplayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_column="0"
                    android:layout_toLeftOf="@+id/translate_panel_close_button"
                    android:text="Small Text" />

                <TextView
                    android:id="@+id/translate_panel_translate_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_well"
                    android:textIsSelectable="false" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/translate_panel_more_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/translate_panel_close_button"
            android:layout_centerHorizontal="true"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_weight="3"
            android:text="@string/action_more" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/translate_panel_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_column="1"
        android:background="@color/transparent"
        android:contentDescription="@string/action_close"
        android:src="@drawable/ic_action_cancel" />

    <ImageButton
        android:id="@+id/translate_panel_add_to_flashcard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/translate_panel_close_button"
        android:layout_marginTop="@dimen/space_relax"
        android:layout_toRightOf="@+id/linearLayout"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:contentDescription="@string/action_add_to_flashcard"
        android:src="@drawable/ic_action_add_to_queue" />

    <ImageButton
        android:id="@+id/translate_panel_speech_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/translate_panel_add_to_flashcard_button"
        android:layout_column="0"
        android:layout_marginTop="@dimen/space_relax"
        android:layout_row="1"
        android:layout_weight="1"
        android:contentDescription="@string/action_speech"
        android:src="@drawable/ic_action_volume_on" />
</RelativeLayout>
