<!--
  ~ Copyright (C) 2014 wak
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.github.wakhub.monodict.activity.BrowserActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@id/focus_dummy"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <EditText
            android:id="@+id/url_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_well"
            android:hint="@string/message_url_placeholder"
            android:imeOptions="actionGo"
            android:inputType="textUri"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <WebView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/web_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <RelativeLayout
            android:id="@+id/translate_panel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/solid_background"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_relax"
                android:layout_toLeftOf="@+id/translate_panel_close_button"
                android:orientation="vertical"
                android:id="@+id/linearLayout">

                <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="150dp"
                    android:id="@+id/scrollView" >

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <TextView
                            android:id="@+id/translate_panel_display_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_column="0"
                            android:layout_toLeftOf="@+id/translate_panel_close_button"
                            android:text="Display"
                            style="@style/AppTheme.DisplayText" />

                        <TextView
                            android:id="@+id/translate_panel_translate_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/space_well"
                            android:textIsSelectable="false"
                            android:text="Translate" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Dictionary name"
                            android:id="@+id/translate_panel_dictionary_name_text"
                            style="@style/AppTheme.DictionaryNameText" />
                    </LinearLayout>
                </ScrollView>

                <Button
                    android:id="@+id/translate_panel_more_button"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/translate_panel_close_button"
                    android:layout_centerHorizontal="true"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:layout_weight="3"
                    android:text="@string/action_more" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/translate_panel_close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_column="1"
                android:background="@color/transparent"
                android:src="@drawable/ic_action_cancel"
                android:contentDescription="@string/action_close" />

            <ImageButton
                android:id="@+id/translate_panel_add_to_flashcard_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:src="@drawable/ic_action_add_to_queue"
                android:layout_below="@+id/translate_panel_close_button"
                android:layout_toRightOf="@+id/linearLayout"
                android:layout_marginTop="@dimen/space_relax"
                android:contentDescription="@string/action_add_to_flashcard" />

            <ImageButton
                android:id="@+id/translate_panel_speech_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:layout_weight="1"
                android:src="@drawable/ic_action_volume_on"
                android:layout_below="@+id/translate_panel_add_to_flashcard_button"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/space_relax"
                android:contentDescription="@string/action_speech" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>
