<!--
  ~ Copyright (C) 2015 wak
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.wakhub.monodict.activity.DictionaryActivity_">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_transparent_space_cozy"
            android:orientation="vertical"
            android:padding="@dimen/space_default"
            android:showDividers="middle">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/rename_button"
                    android:text="@string/blank_text"
                    android:textSize="@dimen/text_size_headline"/>

                <ImageButton
                    android:id="@+id/rename_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/action_rename"
                    android:src="@drawable/ic_edit_grey600_24dp"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/path_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blank_text"
                android:textSize="@dimen/text_size_body"/>

            <CheckBox
                android:id="@+id/enable_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_enable"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_cozy"
                    android:text="Max Results"
                    android:textSize="@dimen/text_size_subhead"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_gravity="bottom"
                    android:background="@color/gray"/>

            </FrameLayout>

            <Spinner
                android:id="@+id/max_results_spinner"
                android:layout_width="match_parent"
                android:entries="@array/max_results"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_cozy"
                />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_cozy"
                    android:text="Fonts"
                    android:textSize="@dimen/text_size_subhead"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_gravity="bottom"
                    android:background="@color/gray"/>
            </FrameLayout>

            <com.github.wakhub.monodict.ui.DictionaryFontView_
                android:id="@+id/index_font_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.github.wakhub.monodict.ui.DictionaryFontView_
                android:id="@+id/phone_font_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.github.wakhub.monodict.ui.DictionaryFontView_
                android:id="@+id/trans_font_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.github.wakhub.monodict.ui.DictionaryFontView_
                android:id="@+id/sample_font_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/flat_button_background"
                android:drawableLeft="@drawable/ic_delete_grey600_24dp"
                android:text="@string/action_delete"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
